--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,13 @@
       package="com.javacodegeeks.android.json"
       android:versionCode="1"
       android:versionName="1.0">
+	  
+	  <uses-sdk
+        android:minSdkVersion="11"
+        android:targetSdkVersion="21" />
+    
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
       
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".JsonParsingActivity"
